--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -5,7 +5,6 @@
     "permissions": [
         "tabs",
         "activeTab",
-        "http://example.com/*",
         "serviceWorker"
     ],
     "action": {
@@ -17,6 +16,16 @@
     "background": {
         "service_worker": "background.js"
     },
+    "content_scripts": [
+        {
+            "matches": [
+                "<all_urls>"
+            ],
+            "js": [
+                "fetch_data.js"
+            ]
+        }
+    ],
     "web_accessible_resources": [
         {
             "resources": [
@@ -33,6 +42,12 @@
         {
             "resources": [
                 "popup/popup.css"
+            ],
+            "matches": []
+        },
+        {
+            "resources": [
+                "fetch_data.js"
             ],
             "matches": []
         }
