--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -5,7 +5,8 @@
     "permissions": [
         "tabs",
         "activeTab",
-        "serviceWorker"
+        "serviceWorker",
+        "contextMenus"
     ],
     "action": {
         "default_popup": "popup/popup.html"
