--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    "liveServer.settings.AdvanceCustomBrowserCmdLine": "chrome",
     "workbench.colorCustomizations": {
         "terminal.background": "#282936",
         "terminal.foreground": "#E9E9F4",
